--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ h1 {
   margin: 20vh 1.5vmax 1vmax 1.5vmax;
 }
 h1.zh {
-  font-family: "fangjunhei-cu", "Lantinghei SC", "兰亭黑-简", "Microsoft Yahei", "微软雅黑", sans-serif;
+  font-family: "Lantinghei SC", "兰亭黑-简", "Microsoft Yahei", "微软雅黑", sans-serif;
   margin-bottom: 2vmax;
 }
 
