--- a/style.css
+++ b/style.css
@@ -230,6 +230,10 @@ iframe {
   .gridxto3 {
     grid-template-columns: 1fr 1fr 1fr;
   }
+  .flexto1 {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
   .hideMobile {
     display: none;
   }
