--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ body {
     margin-left: 1.5vmax; /* no indentation on mobile */
   }
 }
+
 img {
   width: 100%;
   margin: 0;
@@ -235,6 +236,9 @@ iframe {
   }
   .gridxto3 {
     grid-template-columns: 1fr 1fr 1fr;
+  }
+  .gridxto4 {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
   }
   .flexto1 {
     display: grid;
