--- a/style.css
+++ b/style.css
@@ -66,8 +66,6 @@ h1 {
   margin: 20vh 1.5vmax 1vmax 1.5vmax;
 }
 h1.zh {
-  font-family: "Lantinghei SC", "兰亭黑-简", "Microsoft Yahei", "微软雅黑", sans-serif;
-  font-weight: 600;
   margin-bottom: 2vmax;
 }
 
@@ -80,9 +78,7 @@ h2 {
   margin-bottom: 0;
 }
 h2.zh {
-  font-family: "Lantinghei SC", "兰亭黑-简", "Microsoft Yahei", "微软雅黑", sans-serif;
   font-weight: 500;
-
 }
 
 /* body text */
@@ -94,8 +90,8 @@ p {
   margin: 0;
 }
 p.zh {
-  font-family: "STSong", "华文宋体", "NSimSun", "新宋体", "SimSun", "宋体", serif;
   font-size: calc(9px + .7vw + .7vh);
+  font-weight: 300;
 }
 .headerText {
   padding-top: 2vmax;
@@ -126,11 +122,18 @@ h6 {
   margin: calc(.6vh + .6vw) 1vmax calc(1vh + 1vw) 0;
 }
 h6.zh {
-  font-family: "Lantinghei SC", "兰亭黑-简", "Microsoft Yahei", "微软雅黑", sans-serif;
+  font-weight: 300;
 }
 .imgDescription {
   max-width: calc(70px + 9vw + 9vh);
   margin-left: 1.5vmax;
+}
+
+h1.zh {
+  font-family: "gt-black", "Lantinghei SC", 兰亭黑-简, "PingFang SC", 苹方, "SimHei", 黑体, "Microsoft YaHei", 微软雅黑, "Hiragino Sans GB", "Source Han Sans CN", 思源黑体, sans-serif;
+}
+h2.zh, h6.zh, p.zh {
+  font-family: "Lantinghei SC", 兰亭黑-简, "PingFang SC", 苹方, "SimHei", 黑体, "Microsoft YaHei", 微软雅黑, "Hiragino Sans GB", "Source Han Sans CN", 思源黑体, sans-serif;
 }
 
 /* link */
